--- a/Pixiv_Wallpaper_for_Windows_10/ShowPage.xaml
+++ b/Pixiv_Wallpaper_for_Windows_10/ShowPage.xaml
@@ -23,11 +23,12 @@
                     <GradientStop Color="Black" Offset="1"/>
                 </LinearGradientBrush>
             </StackPanel.Background>
-            <TextBlock x:Name="textBlock1" FontSize="36" Foreground="White" Margin="40,0,0,0"/>
-            <TextBlock x:Name="textBlock2" FontSize="28" Foreground="White" Margin="40,0,0,0"/>
-            <TextBlock Grid.Row="1" x:Name="textBlock3" HorizontalAlignment="Right" 
-                   Foreground="White" VerticalAlignment="Center" FontSize="32" Margin="0,0,30,0"/>
+            <TextBlock x:Name="title" FontSize="36" Foreground="White" Margin="40,0,0,0"/>
+            <TextBlock x:Name="userName" FontSize="24" Foreground="White" Margin="40,0,0,0"/>
+            <TextBlock x:Name="viewCount" HorizontalAlignment="Right" 
+                   Foreground="White" VerticalAlignment="Center" FontSize="22" Margin="0,0,30,0"/>
+            <TextBlock x:Name="downloadProgress" FontSize="18" Foreground="White" 
+                       HorizontalAlignment="Center" Visibility="Collapsed"/>
         </StackPanel>
-        
     </Grid>
 </Page>
