--- a/Pixiv_Wallpaper_for_Windows_10/MainPage.xaml
+++ b/Pixiv_Wallpaper_for_Windows_10/MainPage.xaml
@@ -36,8 +36,8 @@
             <Button x:Name="setting_btn_1" FontSize="16" VerticalAlignment="Bottom" Height="50" Width="50" HorizontalContentAlignment="Left" Margin="0" Background="#00000000" Foreground="White" RequestedTheme="Dark" Click="setting_btn_Click">
                 <TextBlock  FontFamily="Segoe MDL2 Assets" Text="&#xE713;" Margin="5,0,0,0"></TextBlock>
             </Button>
-            <Button x:Name="visiturl_button_1" FontSize="16" VerticalAlignment="Bottom" Height="50" Width="50" HorizontalContentAlignment="Left" Margin="0" Background="#00000000" Foreground="White" RequestedTheme="Dark" Click="visiturl_btn_Click">
-                <TextBlock  FontFamily="Segoe MDL2 Assets" Text="&#xE167;" Margin="5,0,0,0"></TextBlock>
+            <Button x:Name="share_button_1" FontSize="16" VerticalAlignment="Bottom" Height="50" Width="50" HorizontalContentAlignment="Left" Margin="0" Background="#00000000" Foreground="White" RequestedTheme="Dark" Click="share_btn_Click">
+                <TextBlock  FontFamily="Segoe MDL2 Assets" Text="&#xE72D;" Margin="5,0,0,0"></TextBlock>
             </Button>
         </StackPanel>
         <SplitView OpenPaneLength="300" IsPaneOpen="false" x:Name="lis" DisplayMode="Overlay" Canvas.ZIndex="1" Margin="0,0,0,0" PaneBackground="#00000000">
@@ -53,25 +53,25 @@
                     <Button FontSize="16" VerticalAlignment="Top" Width="50" Height="50" Margin="0,30,0,0" FontFamily="Segoe MDL2 Assets" Click="Button_Click" HorizontalContentAlignment="Left" Background="#00000000" Foreground="White" RequestedTheme="Dark" FocusVisualPrimaryBrush="#00000000">
                         <TextBlock Text="&#xE700;" Height="18" Margin="5,0,0,0"/>
                     </Button>
-                    <Button x:Name="show_btn" FontSize="16" Height="50" Width="300" HorizontalContentAlignment="Left" Background="#00000000" Foreground="White" RequestedTheme="Dark" Click="show_btn_Click">
+                    <Button x:Name="show_btn" FontSize="16" Height="50" Width="300" HorizontalContentAlignment="Left" Background="#00000000" Foreground="White" Click="show_btn_Click" RequestedTheme="Dark">
                         <StackPanel Orientation="Horizontal">
                             <TextBlock  FontFamily="Segoe MDL2 Assets" Text="&#xE80F;" Margin="5,0,0,0"></TextBlock>
                             <TextBlock x:Uid="Preview" Margin="20,0,0,0"  VerticalAlignment="Center" FontSize="16"/>
                         </StackPanel>
                     </Button>
-                    <Button FontSize="16" Height="50" Width="300" HorizontalContentAlignment="Left" Background="#00000000" Foreground="White" RequestedTheme="Dark" x:Name="next_btn" Click="next_btn_Click">
+                    <Button FontSize="16" Height="50" Width="300" HorizontalContentAlignment="Left" Background="#00000000" Foreground="White" x:Name="next_btn" Click="next_btn_Click" RequestedTheme="Dark">
                         <StackPanel Orientation="Horizontal">
                             <TextBlock  FontFamily="Segoe MDL2 Assets" Text="&#xE0AB;" Margin="5,0,0,0"></TextBlock>
                             <TextBlock x:Uid="Next" Margin="20,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16"></TextBlock>
                         </StackPanel>
                     </Button>
-                    <Button FontSize="16" Height="50" Width="300" HorizontalContentAlignment="Left" Background="#00000000" Foreground="White" RequestedTheme="Dark" Click="setWallpaper_btn_Click">
+                    <Button FontSize="16" Height="50" Width="300" HorizontalContentAlignment="Left" Background="#00000000" Foreground="White" Click="setWallpaper_btn_Click" RequestedTheme="Dark">
                         <StackPanel Orientation="Horizontal">
                             <TextBlock  FontFamily="Segoe MDL2 Assets" Text="&#xE73E;" Margin="5,0,0,0"></TextBlock>
                             <TextBlock x:Uid="SetWallpaper" Margin="20,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16"></TextBlock>
                         </StackPanel>
                     </Button>
-                    <Button FontSize="16" Height="50" Width="300" HorizontalContentAlignment="Left" Background="#00000000" Foreground="White" RequestedTheme="Dark" Click="refresh_btn_Click">
+                    <Button FontSize="16" Height="50" Width="300" HorizontalContentAlignment="Left" Background="#00000000" Foreground="White" Click="refresh_btn_Click" RequestedTheme="Dark">
                         <StackPanel Orientation="Horizontal">
                             <TextBlock  FontFamily="Segoe MDL2 Assets" Text="&#xE1CD;" Margin="5,0,0,0"></TextBlock>
                             <TextBlock x:Uid="Refresh" Margin="20,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16"></TextBlock>
@@ -83,10 +83,10 @@
                             <TextBlock x:Uid="Setting" Margin="20,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16"></TextBlock>
                         </StackPanel>
                     </Button>
-                    <Button x:Name="visiturl_button" FontSize="16" VerticalAlignment="Bottom" Height="50" Width="300" HorizontalContentAlignment="Left" Margin="0" Background="#00000000" Foreground="White" RequestedTheme="Dark" Click="visiturl_btn_Click">
+                    <Button x:Name="share_button" FontSize="16" VerticalAlignment="Bottom" Height="50" Width="300" HorizontalContentAlignment="Left" Margin="0" Background="#00000000" Foreground="White" RequestedTheme="Dark" Click="share_btn_Click">
                         <StackPanel Orientation="Horizontal">
-                            <TextBlock  FontFamily="Segoe MDL2 Assets" Text="&#xE167;" Margin="5,0,0,0"></TextBlock>
-                            <TextBlock x:Uid="Visit" Margin="20,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16"></TextBlock>
+                            <TextBlock  FontFamily="Segoe MDL2 Assets" Text="&#xE72D;" Margin="5,0,0,0"></TextBlock>
+                            <TextBlock x:Uid="Share" Margin="20,0,0,0" HorizontalAlignment="Center" VerticalAlignment="Center" FontSize="16"></TextBlock>
                         </StackPanel>
                     </Button>
                 </StackPanel>
