--- a/Pixiv_Wallpaper_for_Windows_10/SettingPage.xaml
+++ b/Pixiv_Wallpaper_for_Windows_10/SettingPage.xaml
@@ -49,7 +49,7 @@
                 </ComboBox>
                 <TextBlock x:Uid="Other" Margin="30,10,0,0" FontSize="20" RequestedTheme="Dark"/>
                 <TextBlock x:Uid="OtherOptionsExplanation" FontSize="15" Margin="30,10,0,0" RequestedTheme="Dark"/>
-                <ToggleSwitch x:Name="lock_switch" Margin="30,10,0,0" RequestedTheme="Dark" IsEnabledChanged="lock_switch_IsEnabledChanged"></ToggleSwitch>
+                <ToggleSwitch x:Name="lock_switch" Margin="30,10,0,0" RequestedTheme="Dark" Toggled="lock_switch_Toggled"></ToggleSwitch>
             </StackPanel>
         </ScrollViewer>
     </Grid>
