--- a/Pixiv_Wallpaper_for_Windows_10/SettingPage.xaml
+++ b/Pixiv_Wallpaper_for_Windows_10/SettingPage.xaml
@@ -24,12 +24,13 @@
                 <TextBlock x:Uid="PixivLoginExplanation" TextWrapping="WrapWholeWords" FontSize="15" Margin="30,10,0,0" RequestedTheme="Dark"/>
                 <StackPanel x:Name="sp2" Orientation="Horizontal">
                     <TextBlock x:Uid="Account" Margin="30,10,0,0" FontSize="15" RequestedTheme="Dark"/>
-                    <TextBox x:Name="textbox1" Margin="10,10,0,0"  Width="200" RequestedTheme="Dark" LostFocus="textbox1_LostFocus"/>
+                    <TextBox x:Name="textbox1" Margin="10,10,0,0"  Width="200" RequestedTheme="Dark"/>
                 </StackPanel>
                 <StackPanel x:Name="sp3" Orientation="Horizontal">
                     <TextBlock x:Uid="Password" Margin="30,10,0,0" FontSize="15" RequestedTheme="Dark"/>
-                    <PasswordBox x:Name="passwordbox1" Margin="10,10,0,0" Width="200"  RequestedTheme="Dark" LostFocus="passwordbox1_LostFocus"/>
+                    <PasswordBox x:Name="passwordbox1" Margin="10,10,0,0" Width="200"  RequestedTheme="Dark"/>
                 </StackPanel>
+                <Button x:Name="Save" x:Uid="SaveButton" Margin="30,10,0,0" RequestedTheme="Dark" Click="Save_Click"/>
                 <TextBlock x:Uid="LocalData" Margin="30,10,0,0" FontSize="20" RequestedTheme="Dark"/>
                 <StackPanel Orientation="Horizontal">
                     <TextBlock x:Uid="LocalDataSize" FontSize="15" Margin="30,10,0,0" RequestedTheme="Dark"/>
