--- a/Pixiv_Wallpaper_for_Windows_10/LoginPage.xaml
+++ b/Pixiv_Wallpaper_for_Windows_10/LoginPage.xaml
@@ -26,6 +26,6 @@
         </Grid.ColumnDefinitions>
 
         <WebView x:Name="webView"  Grid.Row="1" Grid.ColumnSpan="2" 
-         HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Visibility="Collapsed"/>
+         HorizontalAlignment="Stretch" VerticalAlignment="Stretch" />
     </Grid>
 </Page>
