添加排行榜模式；修改UI

--- a/Pixiv_Wallpaper_for_Windows_10/LoginPage.xaml
+++ b/Pixiv_Wallpaper_for_Windows_10/LoginPage.xaml
@@ -12,8 +12,8 @@
         <Grid.Background>
             <AcrylicBrush x:Name="CMapUwpAcrylicBrush"
               BackgroundSource="HostBackdrop"
-              TintColor="#FFC3BEBE"
-              TintOpacity="0.3"
+              TintColor="#28333e"
+              TintOpacity="0.4"
               FallbackColor="{StaticResource SystemAccentColor}"/>
         </Grid.Background>
         <Grid.RowDefinitions>
