--- a/Pixiv_Wallpaper_for_Windows_10/SettingPage.xaml
+++ b/Pixiv_Wallpaper_for_Windows_10/SettingPage.xaml
@@ -13,13 +13,16 @@
             <StackPanel x:Name="sp1" Margin="0,0,0,0" Width="460" HorizontalAlignment="Left">
                 <TextBlock x:Uid="UpdateInterval" Margin="30,10,0,0" FontSize="20" RequestedTheme="Dark"/>
                 <TextBlock x:Uid="UpdateIntervalExplanation" FontSize="15" Margin="30,10,0,0" RequestedTheme="Dark"/>
-                <ComboBox Margin="30,10,0,0" Width="200" x:Name="combox1" DisplayMemberPath="Key" SelectedValuePath="Value" RequestedTheme="Dark" SelectionChanged="combox1_SelectionChanged">
-                </ComboBox>
+                <ComboBox Margin="30,10,0,0" Width="200" x:Name="timeSet" DisplayMemberPath="Key" SelectedValuePath="Value" RequestedTheme="Dark" SelectionChanged="combox1_SelectionChanged"/>
                 <TextBlock x:Uid="UpdateMode" Margin="30,10,0,0" FontSize="20" RequestedTheme="Dark"/>
                 <TextBlock x:Uid="UpdateModeExplanation" FontSize="15" TextWrapping="WrapWholeWords" Margin="30,10,0,0" RequestedTheme="Dark"/>
                 <RadioButton x:Name="radiobutton1" GroupName="mode" Margin="30,10,0,0" x:Uid="Bookmark" RequestedTheme="Dark" Checked="radiobutton1_Checked"/>
                 <RadioButton x:Name="radiobutton2" GroupName="mode" Margin="30,0,0,0" x:Uid="FollowingUserUpdating" RequestedTheme="Dark" Checked="radiobutton2_Checked"/>
                 <RadioButton x:Name="radiobutton3" GroupName="mode" Margin="30,0,0,0" x:Uid="Recommend" RequestedTheme="Dark" Checked="radiobutton3_Checked"/>
+                <StackPanel Orientation="Horizontal" Margin="30,0,0,0">
+                    <RadioButton x:Name="radiobutton4" GroupName="mode" x:Uid="Ranking" RequestedTheme="Dark" Checked="radiobutton4_Checked"/>
+                    <ComboBox Margin="30,0,0,0" x:Name="rankingMode" RequestedTheme="Dark" DisplayMemberPath="Key" SelectedValuePath="Value" Width="100" SelectionChanged="rankingMode_SelectionChanged"/>
+                </StackPanel>
                 <TextBlock x:Uid="LocalData" Margin="30,10,0,0" FontSize="20" RequestedTheme="Dark"/>
                 <StackPanel Orientation="Horizontal">
                     <TextBlock x:Uid="LocalDataSize" FontSize="15" Margin="30,10,0,0" RequestedTheme="Dark"/>
