添加主题颜色修改。

--- a/Pixiv_Wallpaper_for_Windows_10/App.xaml
+++ b/Pixiv_Wallpaper_for_Windows_10/App.xaml
@@ -2,6 +2,5 @@
     x:Class="Pixiv_Wallpaper_for_Windows_10.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Pixiv_Wallpaper_for_Windows_10"
-    RequestedTheme="Light">
+    xmlns:local="using:Pixiv_Wallpaper_for_Windows_10">
 </Application>
