--- a/Pixiv_Wallpaper_for_Windows_10/ShowPage.xaml
+++ b/Pixiv_Wallpaper_for_Windows_10/ShowPage.xaml
@@ -11,7 +11,7 @@
         <Grid.Background>
             <AcrylicBrush x:Name="CMapUwpAcrylicBrush"
               BackgroundSource="HostBackdrop"
-              TintColor="#28333e"
+              TintColor="{ThemeResource SystemAltMediumColor}"
               TintOpacity="0.4"
               FallbackColor="{StaticResource SystemAccentColor}"/>
         </Grid.Background>
