--- a/Pixiv_Wallpaper_for_Windows_10/SettingPage.xaml
+++ b/Pixiv_Wallpaper_for_Windows_10/SettingPage.xaml
@@ -41,7 +41,7 @@
                 <TextBlock x:Uid="Other" Margin="30,10,0,0" FontSize="20" RequestedTheme="Dark"/>
                 <TextBlock x:Uid="OtherOptionsExplanation" FontSize="15" Margin="30,10,0,0" RequestedTheme="Dark"/>
                 <ToggleSwitch x:Name="lock_switch" Margin="30,10,0,0" Toggled="lock_switch_Toggled" RequestedTheme="Dark"></ToggleSwitch>
-                <Button x:Name="reLogin" Click="reLogin_Click"/>
+                <Button x:Name="reLogin" x:Uid="ReLogin" Click="reLogin_Click" Margin="30,10,0,0" RequestedTheme="Dark"/>
             </StackPanel>
         </ScrollViewer>
     </Grid>
